--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,39 +1,45 @@
-version: '3'
+version: "3.8"
+
 services:
-  pfair-db:
-    image:  mongo:latest
-    security_opt:
-      - seccomp=unconfined
-    container_name: pfair-db
-    ports:
-      - "27017:27017"
-    volumes:
-      - /tmp/db:/data/db
+  mongo:
+    image: mongo:latest
+    container_name: mongo
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: examplepassword
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: admin
+    ports:
+      - "0.0.0.0:27017:27017"
     networks:
-      pfair:
-
-  pfair-db-ui:
-    image: mongo-express
-    security_opt:
-      - seccomp=unconfined
+      - MONGO
+    volumes:
+      - type: volume
+        source: MONGO_DATA
+        target: /data/db
+      - type: volume
+        source: MONGO_CONFIG
+        target: /data/configdb
+  mongo-express:
+    image: mongo-express:latest
+    container_name: mongo-express
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+      ME_CONFIG_MONGODB_ADMINPASSWORD: admin
+      ME_CONFIG_MONGODB_SERVER: mongo
+      ME_CONFIG_MONGODB_PORT: "27017"
+    ports:
+      - "0.0.0.0:8081:8081"
+    networks:
+      - MONGO
     depends_on:
-      - pfair-db
-    ports:
-      - 8081:8081
-    volumes:
-      - /tmp/db:/data/db
-    environment:
-      -  ME_CONFIG_MONGODB_SERVER=pfair-db
-      -  ME_CONFIG_MONGODB_PORT=27017
+      - mongo
     restart: unless-stopped
-    networks:
-      pfair:
-
 
 networks:
-  local:
-  pfair:
-    driver: bridge
+  MONGO:
+    name: MONGO
+
+volumes:
+  MONGO_DATA:
+    name: MONGO_DATA
+  MONGO_CONFIG:
+    name: MONGO_CONFIG
