Updates for latest images

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,60 +1,45 @@
-version: '3.8'
+version: "3.8"
 
 services:
-  #  pfair:
-  #    image: local/pfair
-  #    container_name: pfair
-  #    restart: unless-stopped
-  #    environment:
-  #      ReadWriteKey: tangoru
-  #      DB: tangoru
-  #      DBauthPath: /home/dicom/services/pfair.json
-  #      pfair_MONGODB: mongodb://pfair-db:27017
-  #    volumes:
-  #      - ./pfair:/pfair:ro
-  #    ports:
-  #      - "55553:55553"
-  #    networks:
-  #      local:
-  #      pfair:
-  #
-  pfair-db:
+  mongo:
     image: mongo:latest
-    security_opt:
-      - seccomp=unconfined
+    container_name: pfair-db
     environment:
-      - PUID=1000
-      - PGID=1000
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=examplepassword
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: admin
     ports:
-      - 27017:27017
-    volumes:
-      - pfair-db-data:/data/db
-    restart: unless-stopped
+      - "0.0.0.0:27017:27017"
     networks:
-      pfair:
-
-  pfair-db-ui:
-    image: mongo-express
+      - MONGO
+    volumes:
+      - type: volume
+        source: MONGO_DATA
+        target: /data/db
+      - type: volume
+        source: MONGO_CONFIG
+        target: /data/configdb
+  mongo-express:
+    image: mongo-express:latest
+    container_name: pfair-db-ui
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+      ME_CONFIG_MONGODB_ADMINPASSWORD: admin
+      ME_CONFIG_MONGODB_SERVER: mongo
+      ME_CONFIG_MONGODB_PORT: "27017"
+    ports:
+      - "0.0.0.0:8081:8081"
+    networks:
+      - MONGO
     depends_on:
-      - pfair-db
-    ports:
-      - 8081:8081
-    volumes:
-      - pfair-db-data:/data/db
-    environment:
-      -  ME_CONFIG_MONGODB_SERVER=pfair-db
+      - mongo
     restart: unless-stopped
-    networks:
-      pfair:
 
 networks:
-  local:
-  pfair:
+  MONGO:
+    name: pfair_pfair
 
 volumes:
-  pfair-db-data:
-
-
-
+  MONGO_DATA:
+    name: MONGO_DATA
+  MONGO_CONFIG:
+    name: MONGO_CONFIG
